--- a/version-1/src/App.css
+++ b/version-1/src/App.css
@@ -58,7 +58,7 @@ header nav ul a{
     background-color: white;
     border: 0.1rem outset var(--light-gray) ;
     color:var(--dark-gray);
-    padding: 0.3rem;
+    padding: 0.2rem 1rem;
     margin: 2rem;
 
 }
