--- a/version-1/src/App.css
+++ b/version-1/src/App.css
@@ -1,70 +1,88 @@
-
-header{
-    background-color: white;
-    border-radius: 8px;
-    padding: 1rem;
-    margin-bottom: 1rem;
+header {
+  border-radius: 8px;
+  padding: 1rem;
+  margin-bottom: 1rem;
+  border-bottom: 0.1rem solid var(--black);
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  gap: 1rem;
 }
 
-header nav ul{
-    list-style-type: none;
-    display: flex;
-    flex-direction: row;
-    flex-wrap: nowrap;
-    justify-content: space-between;
+header nav ul {
+  list-style-type: none;
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: space-between;
+  gap: 1rem;
 }
 
-
-header nav ul a{
-    color: black;
-    text-decoration: none;
-    align-items: start;
+header nav ul a {
+  color: inherit;
+  text-decoration: none;
+  align-items: start;
 }
 
-.home-page{
-    font-weight: bold;
+header .toggle {
+  align-self: flex-end;
+}
+.home-page {
+  align-self: flex-start;
+  font-weight: bold;
+  flex-basis: 1;
 }
 
 /* Up to 699px - display all cards in a single column */
 /*Default styles (Mobile First)*/
-.parent{
-    display: grid;
-    margin-top: 1rem;
-    grid-template-columns: 1fr; ;/* single column*/
-    gap: 2rem;
-    padding: 1rem;
+.parent {
+  display: grid;
+  margin-top: 1rem;
+  grid-template-columns: 1fr; /* single column*/
+  gap: 2rem;
+  padding: 1rem;
 }
 
 /* 700px and larger - display with all 4 cards on one row.  */
-@media(min-width:700px){
-    .parent{
-       grid-template-columns: 1fr 1fr 1fr 1fr;/* four cards(columns) per row*/
-    } 
+@media (min-width: 700px) {
+  .parent {
+    grid-template-columns: 1fr 1fr 1fr 1fr; /* four cards(columns) per row*/
   }
-
-.country-detail{
-   padding:1rem;
-    display: flex;
-    align-content: space-around;
-    justify-content: flex-start;
-    gap:5rem;
-    margin:2rem;
 }
 
-.country-detail img{
-    width:30%;
-}
-.country-detail-back-link{
-    background-color: white;
-    border: 0.1rem outset var(--light-gray) ;
-    color:var(--dark-gray);
-    padding: 0.2rem 1rem;
-    margin: 2rem;
-
+.country-detail {
+  padding: 1rem;
+  display: flex;
+  align-content: space-around;
+  justify-content: flex-start;
+  gap: 5rem;
+  margin: 2rem;
 }
 
-@media(max-width:699px){
-    .country-detail{
-        display: inline-block;
-    }
+.country-detail img {
+  width: 30%;
+}
+.country-detail-back-link {
+  background-color: white;
+  border: 0.1rem outset var(--light-gray);
+  color: var(--dark-gray);
+  padding: 0.2rem 1rem;
+  margin: 2rem;
+}
+
+@media (max-width: 699px) {
+  .country-detail {
+    display: inline-block;
+  }
+}
+
+.off {
+  background-color: var(--white);
+  color: var(--black);
+}
+
+.on {
+  background-color: #2b3844;
+  color: var(--light-gray);
 }
