--- a/version-1/src/index.css
+++ b/version-1/src/index.css
@@ -1,19 +1,21 @@
-/* :root {
-  font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
-  line-height: 1.5;
-  font-weight: 400;
-} */
-:root{
+:root {
+  --background-color: #fafafa;
+  --black: black;
   --dark-blue: #111517; /*Dark Blue (Text Color)*/
   --light-gray: #fafafa; /*Light Gray (Background Color)*/
   --white: #ffffff; /* CountryCard Background Color*/
   --dark-gray: #858585; /* Input Border Color*/
-  --purple: #7672ce ; /* Submit Button Color*/
+  --primary-text-color: #0a0a0a;
+  --secondar-text-color: #ffffff;
+  --purple: #7672ce; /* Submit Button Color*/
 }
 
-body{
-  background-color: var(--light-gray);
+body {
   font-family: "Nunito Sans", sans-serif;
+  padding: 0;
+  margin: 0;
+}
+
+main {
   padding: 1rem;
-  margin: 1rem;
 }
