--- a/version-2/src/App.css
+++ b/version-2/src/App.css
@@ -1,8 +1,13 @@
+/*General */
+.App {
+  min-height: 100vh;
+}
+
+/*header */
 header {
   border-radius: 8px;
   padding: 1rem;
   margin-bottom: 1rem;
-  border-bottom: 0.1rem solid var(--black);
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -56,18 +61,27 @@ header .toggle {
   }
 }
 
-.country-detail {
+.country-detail .card {
+  background-color: inherit;
+  color: inherit;
   padding: 1rem;
   display: flex;
+  flex-direction: row;
   align-content: space-around;
-  justify-content: flex-start;
+  justify-content: center;
   gap: 5rem;
   margin: 2rem;
 }
 
-.country-detail img {
+.country-detail .card img {
+  align-self: flex-start;
   width: 30%;
 }
+
+.country-detail .card .country-card-text {
+  align-self: center;
+}
+
 .country-detail-back-link {
   background-color: white;
   border: 0.1rem outset var(--light-gray);
@@ -82,26 +96,18 @@ header .toggle {
   }
 }
 
-.off {
-  background-color: var(--white);
-  color: var(--black);
-}
-
-.on {
-  background-color: #2b3844;
-  color: var(--light-gray);
-}
-
 .home-forms {
   display: flex;
   flex-direction: row;
   justify-content: space-between;
 }
 
-.home-forms .sort-form select {
+.home-forms form input,
+select {
   background-color: inherit;
-  border: 0.01rem solid #2b3844;
   color: inherit;
+}
+.home-forms .sort-form select {
   width: 100%;
   padding: 1rem;
 }
