--- a/version-2/src/components/Card.css
+++ b/version-2/src/components/Card.css
@@ -1,16 +1,21 @@
-.country-card-text{
-    display: flex;
-    flex-direction: column;
-    flex-wrap: nowrap;
-    justify-content: flex-start;
-    height: 100%;
+.country-card-text {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  height: 100%;
+  padding-left: 1rem;
 }
 
-.country-card-text h2{
-    text-align: start;
-    margin-bottom: 0;
+.country-card-text h2 {
+  text-align: start;
+  margin-bottom: 0;
 }
 
-.country-card-text p{
-    margin-bottom: 0;
+.country-card-text p {
+  margin-bottom: 0;
+}
+
+img {
+  margin-bottom: 0;
 }
