visit count code

--- a/version-2/src/App.css
+++ b/version-2/src/App.css
@@ -111,3 +111,10 @@ select {
   width: 100%;
   padding: 1rem;
 }
+
+.saved-countries-card {
+  padding: 1rem;
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
+  gap: 1rem;
+}
